# document-AI

./: .replit  COMMIT_EDITMSG  README.md  RENDER_DEPLOY.md  index  package-lock.json  package.json  pyproject.toml  render-build.sh  replit.md
app/services/: pdf_service.py
app/utils/: config.py  llm_client.py  text_chunker.py
attached_assets/: README_1755417443278.md  pdf_service_1755419621006.py  requirements_1755420042950.txt
client/src/: index.css
client/src/components/: processing-status.tsx  results-section.tsx  upload-box.tsx
client/src/lib/: api.ts
client/src/pages/: home.tsx
heads/: main
logs/: HEAD
logs/refs/heads/: replit-agent
replit/: agent-ledger
server/: index.ts  requirements.txt  routes.ts  storage.ts
server/services/: llm_client.py  pdf_service.py
shared/: schema.ts
